# parallel-programming-mpi

./: CMakeLists.txt  Makefile  main.cpp
matrix/: matrix.cpp  matrix.h
operations/: operations.cpp  operations.h
